[gd_scene load_steps=35 format=2]

[ext_resource path="res://Assets/Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tileset.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Controls.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/manaspc.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Levels/Level5/Door5.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Levels/Level5/Button5.gd" type="Script" id=9]
[ext_resource path="res://Scenes/SpikeTriple.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/Levels/Level17/Player17.gd" type="Script" id=11]
[ext_resource path="res://Scenes/LevelChanger.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Levels/Level17/Level17.gd" type="Script" id=13]
[ext_resource path="res://Scenes/LevelNames.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Fog.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=18]
0/name = "Tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 80, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 16, Vector2( 4, 0 ), 144, Vector2( 4, 1 ), 146, Vector2( 4, 2 ), 18 ]
0/autotile/icon_coordinate = Vector2( 1, 1 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level17" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -528.0
margin_bottom = -288.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Label" parent="."]
modulate = Color( 0, 0, 0, 0.270588 )
margin_left = 924.215
margin_top = 276.259
margin_right = 1064.22
margin_bottom = 307.259
custom_fonts/font = SubResource( 1 )
text = "EXIT>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" parent="." instance=ExtResource( 7 )]
position = Vector2( 907.936, 269.239 )
script = ExtResource( 8 )

[node name="Spikes" type="Node" parent="."]

[node name="SpikeTriple" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 500, 45 )
rotation = 3.14159

[node name="SpikeTriple2" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 421, 45 )
rotation = 3.14159

[node name="SpikeTriple9" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 411.1, 480 )

[node name="SpikeTriple10" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 488.882, 480 )

[node name="SpikeTriple11" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 623.232, 480 )

[node name="SpikeTriple12" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 302.206, 480 )

[node name="SpikeTriple13" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 224.424, 480 )

[node name="SpikeTriple14" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 101.387, 480 )

[node name="SpikeTriple8" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 216.712, 45 )
rotation = 3.14159

[node name="SpikeTriple3" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 628, 45 )
rotation = 3.14159

[node name="SpikeTriple7" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 297.996, 45 )
rotation = 3.14159

[node name="SpikeTriple5" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 960, 45 )
rotation = 3.14159

[node name="SpikeTriple6" parent="Spikes" instance=ExtResource( 10 )]
position = Vector2( 990, 380 )
rotation = 3.14159

[node name="PauseMenu" parent="Spikes" instance=ExtResource( 16 )]

[node name="Fog" parent="." instance=ExtResource( 15 )]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
tile_set = SubResource( 18 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 65534, 0, 0, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 65537, 4, 0, 196609, 5, 0, 196609, 6, 0, 196609, 7, 0, 65537, 8, 0, 196609, 9, 0, 196609, 10, 0, 196609, 11, 0, 65537, 12, 0, 196609, 13, 0, 196609, 14, 0, 65537, 15, 0, 196609, 16, 0, 65537, 17, 0, 196609, 18, 0, 196609, 19, 0, 196609, 20, 0, 196609, 21, 0, 196609, 22, 0, 196609, 23, 0, 0, 131070, 0, 65537, 131071, 0, 131073, 65536, 0, 131073, 65537, 0, 131073, 65538, 0, 131073, 65539, 0, 65537, 65543, 0, 65540, 65547, 0, 65540, 65550, 0, 65540, 65552, 0, 65540, 65559, 0, 65540, 196606, 0, 65540, 131075, 0, 65540, 131079, 0, 131076, 131083, 0, 65540, 131086, 0, 131076, 131088, 0, 65540, 131095, 0, 65540, 262142, 0, 65540, 196611, 0, 65540, 196619, 0, 65540, 196624, 0, 65540, 196631, 0, 65540, 327678, 0, 0, 327679, 0, 196609, 262144, 0, 196610, 262147, 0, 131076, 262155, 0, 131076, 262160, 0, 65540, 262162, 0, 196608, 262163, 0, 196609, 262164, 0, 196609, 262165, 0, 196609, 262166, 0, 196609, 262167, 0, 65537, 262168, 0, 196609, 262169, 0, 65537, 393214, 0, 65540, 327696, 0, 131076, 327705, 0, 65540, 458750, 0, 65540, 393223, 0, 4, 393230, 0, 4, 393241, 0, 65540, 524286, 0, 65540, 458759, 0, 65540, 458766, 0, 65540, 458770, 0, 196608, 458771, 0, 196609, 458772, 0, 196609, 458773, 0, 196609, 458774, 0, 196609, 458775, 0, 65537, 458776, 0, 196609, 458777, 0, 65537, 589822, 0, 65540, 524291, 0, 4, 524295, 0, 65540, 524299, 0, 4, 524302, 0, 65540, 524304, 0, 4, 524311, 0, 65540, 655358, 0, 65540, 589827, 0, 65540, 589831, 0, 65540, 589835, 0, 65540, 589838, 0, 65540, 589840, 0, 65540, 589847, 0, 65540, 720894, 0, 0, 720895, 0, 196609, 655360, 0, 0, 655361, 0, 1, 655362, 0, 1, 655363, 0, 65537, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 65537, 655368, 0, 1, 655369, 0, 1, 655370, 0, 1, 655371, 0, 65537, 655372, 0, 1, 655373, 0, 1, 655374, 0, 65537, 655375, 0, 1, 655376, 0, 65537, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 655380, 0, 1, 655381, 0, 0, 655382, 0, 196609, 655383, 0, 0, 720896, 0, 131072, 720897, 0, 131073, 720898, 0, 131073, 720899, 0, 131073, 720900, 0, 131073, 720901, 0, 131073, 720902, 0, 131073, 720903, 0, 131073, 720904, 0, 131073, 720905, 0, 131073, 720906, 0, 131073, 720907, 0, 131073, 720908, 0, 131073, 720909, 0, 131073, 720910, 0, 131073, 720911, 0, 131073, 720912, 0, 131073, 720913, 0, 131073, 720914, 0, 131073, 720915, 0, 131073, 720916, 0, 131073, 720917, 0, 131074 )

[node name="LevelChanger" parent="." instance=ExtResource( 12 )]
position = Vector2( 1131.41, 287.262 )

[node name="LevelNames" parent="." instance=ExtResource( 14 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 30.7861, 131.245 )
script = ExtResource( 11 )
GRAVITY = 100

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.494118, 0.494118, 0.494118, 1 )

[node name="Button" parent="." instance=ExtResource( 6 )]
position = Vector2( 933.174, 189.508 )
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="Button"]
wait_time = 8.0

[node name="Controls" parent="." instance=ExtResource( 4 )]
[connection signal="door_close" from="Button" to="Door" method="_on_Button_door_close"]
[connection signal="timeout" from="Button/Timer" to="Door" method="_on_Timer_timeout"]
[connection signal="timeout" from="Button/Timer" to="Button" method="_on_Timer_timeout"]
[connection signal="pressed" from="Controls/Up" to="Player" method="_on_Up_pressed"]
[connection signal="pressed" from="Controls/Right" to="Player" method="_on_Right_pressed"]
[connection signal="released" from="Controls/Right" to="Player" method="_on_Right_released"]
[connection signal="pressed" from="Controls/Left" to="Player" method="_on_Left_pressed"]
[connection signal="released" from="Controls/Left" to="Player" method="_on_Left_released"]

[editable path="Button"]

[editable path="Controls"]
